--- a/background .html
+++ b/background .html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>dksfjkdsfjsdl</h1>
+    <h1>today the topic is about repository formation</h1>
 </body>
 </html>
